--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,10 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import photo from "../assets/paul.jpg";
 import AboutContent from "../content/about.md"
 ---
-<section class="text-satoshi h-[50vh] px-4 sm:px-6 lg:px-8 py-4 sm:py-12 lg:py-16 mt-10 text-center">
-  <div class="mx-auto w-full max-w-xs sm:max-w-lg md:max-w-2xl lg:max-w-4xl xl:max-w-5xl prose prose-sm sm:prose-base md:prose-lg lg:prose-xl card p-4 sm:p-6 md:p-8 lg:p-10 bg-base-100/5 rounded-2xl">
+<section class="text-satoshi min-h-full lg:min-h-[60vh] px-4 sm:px-6 lg:px-8 py-4 sm:py-12 lg:py-16 my-20 lg:my-5 xl:mt-[10%] text-center flex justify-center items-center">
+  <div class="mx-auto w-full max-w-xs sm:max-w-lg md:max-w-2xl lg:max-w-4xl xl:max-w-6xl prose prose-sm sm:prose-base md:prose-lg lg:prose-xl xl:prose-2xl card p-4 sm:p-6 md:p-8 lg:p-10 bg-base-100/5 rounded-2xl">
     <AboutContent class="prose prose-xl "/>
   </div>
 </section>
