--- a/src/components/TrackList.astro
+++ b/src/components/TrackList.astro
@@ -15,15 +15,18 @@ const tracks = [
 ];
 ---
 
-<section class="h-[auto] flex flex-col items-center">
-    <div class="text-left">
-        <h1 class="text-satoshi font-light text-left text-2xl text-">Tracks</h1>
+<section class="h-auto flex flex-col items-center w-full gap-6" id="tracks">
+    <div class="w-3/4">
+        <h1 class="text-satoshi font-light tracking-wider text-left text-3xl text-gray-400">
+        Tracks
+        </h1>
     </div>
-    <ul class="list bg-base-100 rounded-box shadow-md w-3/4  mx-auto">
-        <li class="p-4 pb-2 text-xs opacity-60 tracking-wide">
-            Most played songs this week
-        </li>
+    <ul class="list bg-base-100 rounded-box shadow-md w-9/10 sm:w-3/4 mx-auto">
+        <li class="p-4 pb-2"></li>
         {tracks.map((t) => <Track {...t} />)}
+        <li class="p-4 pb-2 text-xs opacity-60 tracking-wide italic text-right">
+            Lo mas escuchado en Spotify
+        </li>
     </ul>
 </section>
 
