--- a/src/components/TrackList.astro
+++ b/src/components/TrackList.astro
@@ -7,11 +7,11 @@ import cover4 from "../assets/hero_item.jpg"
 import cover5 from "../assets/europeo.jpg"
 
 const tracks = [
-    { numero: "01", musica: "DANCING", autor: "Paul Stenn", imgLink: cover1 },
-    { numero: "02", musica: "Make it", autor: "Paul Stenn", imgLink: cover2 },
+    { numero: "01", musica: "DANCING", autor: "Paul Stenn, Bryant BRX, KC1205", imgLink: cover1 },
+    { numero: "02", musica: "Make it", autor: "Paul Stenn, Bryant BRX", imgLink: cover2 },
     { numero: "03", musica: "Night Circuit", autor: "Paul Stenn", imgLink: cover3 },
-    { numero: "04", musica: "COMO TE LLAMAS", autor: "Paul Stenn", imgLink: cover4 },
-    { numero: "05", musica: "Europeo", autor: "Paul Stenn", imgLink: cover5 }
+    { numero: "04", musica: "COMO TE LLAMAS", autor: "Paul Stenn, ALIVVX", imgLink: cover4 },
+    { numero: "05", musica: "Europeo", autor: "Paul Stenn, ALIVVX, KoK8", imgLink: cover5 }
 ];
 ---
 
