--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,11 +7,9 @@ const links = [
 ---
 
 <div
-    class="flex justify-between h-[10vh] items-center px-4 sm:px-6 md:px-10 xl:px-36 fade-in-slow text-gray-300 font-satoshi font-bold tracking-widest"
+    class="flex justify-between h-[10vh] items-center px-4 sm:px-6 md:px-10 xl:px-36 fade-in-slow text-gray-300 font-satoshi font-bold tracking-widest z-10"
 >
-    <span
-        class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl"
-    >
+    <span class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl">
         Paul
         <span class="text-accent"> Stenn </span>
     </span>
