--- a/src/components/Track.astro
+++ b/src/components/Track.astro
@@ -5,9 +5,13 @@ const { musica, autor, numero, imgLink } = Astro.props;
 ---
 
 <li class="list-row">
-    <div class="text-3xl sm:text-4xl font-thin opacity-30 tabular-nums -rotate-90">{numero}</div>
+    <div
+        class="text-3xl sm:text-4xl font-thin opacity-30 tabular-nums -rotate-90"
+    >
+        {numero}
+    </div>
     <div>
-        <Image alt={musica} src={imgLink} class="size-10 rounded-box"/>
+        <Image alt={musica} src={imgLink} class="size-10 rounded-box" />
     </div>
     <div class="list-col-grow">
         <div>{musica}</div>
@@ -16,6 +20,6 @@ const { musica, autor, numero, imgLink } = Astro.props;
         </div>
     </div>
     <button class="btn btn-square btn-ghost">
-        <Icon name="playButton" />
+        <Icon name="spotify-icon" />
     </button>
 </li>
